# amq_httpserver

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  amq_consumer_test.cc  amq_factory.cc  amq_factory.h  example.c  main.cc
